# data-model-priv-mkts

./: README.md  index.html  pyproject.toml
docs/: index.html  index.md
docs/core/: base.schema.md  dates.schema.md  enums.schema.md  identifiers.schema.md  money.schema.md  party.schema.md  percentage.schema.md
docs/credit/: amortization.schema.md  borrower.schema.md  covenants.schema.md  enums.schema.md  facility.schema.md  interest.schema.md
docs/deal/: deal.schema.md  deal_asset.schema.md  enums.schema.md
docs/fund/: capital_activity.schema.md  commitment.schema.md  enums.schema.md  fund.schema.md  nav.schema.md  portfolio_company.schema.md  waterfall.schema.md
docs/portfolio/: cash_flow.schema.md  performance.schema.md  portfolio.schema.md  position.schema.md
docs/real_estate/: enums.schema.md  lease.schema.md  metrics.schema.md  property.schema.md  vehicle.schema.md
docs/secondaries/: enums.schema.md  lp_interest.schema.md  trade.schema.md  transaction.schema.md  transfer.schema.md
docs/trade_lifecycle/: documentation.schema.md  settlement.schema.md  trade.schema.md
examples/core/: sample_party.json
examples/credit/: sample_facility.json
examples/deal/: sample_deal_assets.json  sample_lbo_deal.json
examples/fund/: sample_capital_call.json  sample_fund.json
examples/portfolio/: sample_portfolio.json
examples/real_estate/: sample_property.json
examples/secondaries/: sample_secondary_trade.json
schemas/core/: base.schema.json  dates.schema.json  enums.schema.json  money.schema.json  (+3 more)
tasks/: todo.md
tools/: generate_docs.py  validate.py
(+36 files in other folders)
